src/objects/MUSW__Occupancy_Type__c.object
<CustomObject>
    <description>Occupancy Codes, descriptions and sample usage</description>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Usage__c</fullName>
        <label>Usage</label>
        <type>TextArea</type>
    </fields>
    <label>Occupancy Type</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Description__c</columns>
        <columns>MUSW__Usage__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Use Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Occupancy Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>